# sleep-environment-monitor

./: .gitignore  AGENTS.md  Cargo.toml  architecture.md  build.rs  conventions.md  development_plan.md  post_receiver.py  walkthrough.md
.cargo/: config.toml
docs/: README.md  architecture.md  conventions.md  development_plan.md  hardware_information.md  walkthrough.md
docs/00-project/: 00-development-plan.md  01-walkthrough.md  02-handoff.md  03-todo.md
docs/10-firmware/: 00-architecture.md  01-hardware.md  02-conventions.md  03-network.md  04-configuration.md  05-ble.md
docs/20-server/: 00-overview.md  01-rest-api.md  02-toolchain.md  03-cli.md  04-persistence-configuration.md
docs/30-integration/: 00-network-roadmap.md
firmware/: Cargo.toml  README.md
firmware/src/: board.rs  config.rs  lib.rs  types.rs
hardware/: README.md
hardware/easyeda/: sleep-monitor.epro
server/: README.md  config.example.toml  post_receiver.py  pyproject.toml
server/src/sleep_env_server/: __init__.py  __main__.py  app.py  cli.py  config.py  discovery.py  logging_config.py  models.py  output.py  runtime.py  storage.py  tui.py
server/tests/: test_api.py  test_cli.py  test_config.py  test_discovery.py  test_models.py  test_output.py  test_storage.py  test_tui.py
src/: board.rs  lib.rs  types.rs
src/drivers/: flash.rs  mic.rs  mod.rs  opt3001.rs  sht40.rs
src/storage/: flash_model.rs  mod.rs  spool.rs
src/tasks/: aggregator.rs  led.rs  mic.rs  mod.rs  net.rs  sensor.rs  storage.rs  upload.rs  wifi.rs
src/util/: mod.rs  queue.rs  status.rs
(+81 files in other folders)
