[workspace]
members = ["firmware"]
default-members = ["firmware"]
resolver = "3"

[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build firmware with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
lto = "fat"
opt-level = "s"
